<resources>
    //Driver
    <string name="app_name">GoKart Tournament</string>


    <string name="button_addDriver">Add driver</string>
    <string name="save_gokart">Save Driver info</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_gokart_image">Select driver profile picture</string>
    <string name="change_gokart_image">Change Go kart image</string>
    <string name="search_title">Search by Name</string>

    <string name="hint_DriverName">Driver Name</string>
    <string name="hint_DriverGender">Driver gender</string>
    <string name="hint_CarModel">Car Model</string>
    <string name="search_hint">search by name</string>

    <string name="menu_addDriver">Add Driver</string>
    <string name="menu_mapGokart">Map of Gokarts</string>
    <string name="menu_cancelDriver">Cancel</string>
    <string name="menu_deleteGokart">Delete GoKart</string>


    <string name="gokart_activity_started">Go Kart Activity started…</string>
    <string name="gokart_add_cancelled">Go kart Add Cancelled</string>
    <string name="enter_gokart_title">Please Enter a Driver name</string>


    <string name="pickDate">Select Born Day</string>
    <string name="textView1">Welcome to the Go karts app!</string>

    <string name="button_location">Set Location</string>

    <!-- Map Strings -->
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_gokart_maps">Map of All Gokarts</string>
    <string name="title_activity_search_results">Search</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <!-- Strings for Card Layout -->
    <string name="currenttitle">Current Title</string>
    <string name="currentdescription">GoKart App!!</string>


    //Tournament
    <string name="tournament_title">Number of drivers</string>
    <string name="tournament_description">Tournament Description</string>
    <string name="tournament_date">Tournament Date:</string>
    <string name="tournament_location">Tournament Location:</string>
    <string name="tournament_laps">Number of Laps:</string>
    <string name="button_addT">Add Tournament</string>
    <string name="menu_addTournament">Add Tournament</string>
    <string name="menu_cancelTournament">Cancel Tournament</string>

    //error Messages
    <string name="error_no_driver_selected">No drivers selected</string>
    <string name="error_no_drivers_added">No drivers added to the tournament</string>
    <string name="tournament_add_cancelled">Tournament Add Cancelled</string>
    // Success Messages
    <string name="success_drivers_added">Drivers added successfully</string>
    <string name="success_tournament_created">Tournament created successfully</string>
    <string name="tournament_activity_started">Go Kart Activity started…</string>



    //login
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>

