<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addDriver"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_add_tournament"
        android:title="@string/menu_addTournament"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_mapGokart"
        app:showAsAction="always"/>





</menu>